# slang

./: .gitignore  Cargo.toml  Makefile  README.md
doc/: api.md  api_ja.md  guide.md  guide_en.md  ronbu.md  specification.md  specification_ja.md  tc.md
src/: ast.h  error.rs  interpreter.h  ir.rs  lib.rs  type_checker.h  type_system.h  type_system.rs
src/ast/: mod.rs
src/codegen/: mod.rs
src/compiler/: mod.rs
src/debugger/: mod.rs
src/formatter/: mod.rs
src/highlighter/: mod.rs
src/include/: ast.h  codegen.h  common.h  error.h  lexer.h  parser.h  type_system.h  vector.h
src/ir/: mod.rs
src/lexer/: mod.rs
src/optimizer/: mod.rs
src/parser/: mod.rs
src/runtime/: mod.rs
src/src/: ast.c  codegen.c  error.c  interpreter.c  lexer.c  main.c  parser.c  type_system.c  vector.c
src/type_system/: cast.rs  checker.rs  inference.rs  mod.rs  tests.rs
tests/: hello.sl  task_manager.sl
